# check-version

./: .depcheckrc  .eslintignore  .gitignore  .mocharc.js  .mocharc.json  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  eslint.config.mjs  mocharc.json  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: check-dist.yml  release.yml  test.yml  testAction.yml
__tests__/: main.test.ts  package-lock.json  package.json
src/: check-version.ts  checkVersion.ts  checkVersion_new.ts  getFiles.ts  getTags.ts  main.ts  util.ts
src/__tests__/: checkVersion.test.ts  testData.ts
src/lib/: checkVersion.ts  getFiles.ts  getTags.ts
src/lib/Cargo/: index.ts
src/lib/Cargo/__tests__/: index.test.ts
src/lib/Cargo/__tests__/__fixtures__/node/: Cargo.toml
src/lib/Poetry/: index.ts
src/lib/Poetry/__tests__/: index.test.ts
src/lib/Poetry/__tests__/__fixtures__/: pyproject.toml
src/lib/npm/: index.ts
src/lib/npm/__tests__/: index.test.ts
