[package]
build = 'build.rs'
description = 'Substrate node for DSCP Project'
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
name = 'dscp-node'
version = '9.0.0'

[[bin]]
name = 'dscp-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
futures = { version = "0.3.27", features = ["thread-pool"] }
bs58 = "0.4.0"

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }